feat(distrib) clean for distribution